# logcentry

./: .gitignore  ML_MODEL_USAGE.md  README.md  project_overview.md  pyproject.toml  requirements.txt  start_services.sh  verify_sdk.py  verify_siem.py
demo/: full_demo.py  run_demo.sh  vulnapp.py
examples/: sdk_quickstart.py
knowledge_base/custom_rules/: rules.json
knowledge_base/cve_database/: cves.json
knowledge_base/mitre_attack/: techniques.json
knowledge_base/owasp/: owasp_top10.json
knowledge_base/sigma_rules/: rules.json
knowledge_base/threat_intel/: iocs.json
reports/: analysis_report_20260206_062936.html  analysis_report_20260206_063213.html  analysis_report_20260206_104208.html
src/logcentry/: __init__.py  __main__.py  cli.py  config.py
src/logcentry/api/: __init__.py  auth.py  database.py  models.py  server.py  users.py
src/logcentry/api/routes/: __init__.py  auth.py  projects.py  siem.py
src/logcentry/api/services/: audit.py  auth_zk.py  cache.py  logs.py
src/logcentry/commands/: __init__.py  analysis.py  api.py  auth.py  dashboard.py  monitor.py
src/logcentry/core/: __init__.py  analyzer.py  models.py  parser.py
src/logcentry/dashboard/: __init__.py
src/logcentry/dashboard/templates/: index.html
src/logcentry/ingestion/: __init__.py  journald.py  pcap.py  static.py  webapp.py
src/logcentry/rag/: __init__.py  chunking.py  cve_api.py  embeddings.py  knowledge.py  retriever.py  vectorstore.py
src/logcentry/reporting/: __init__.py  html.py
src/logcentry/sdk/: __init__.py  async_client.py  circuit_breaker.py  client.py  decorators.py  middleware.py  models.py  security.py  tracing.py
src/logcentry/sdk/integrations/: __init__.py  django_integration.py  flask_integration.py
src/logcentry/sdk/plugins/: __init__.py  parsers.py  retrievers.py
src/logcentry/siem/: __init__.py  alerts.py  correlation.py  rules.py  timeline.py  ueba.py
src/logcentry/utils/: __init__.py  logging.py  output.py  security.py
src/logcentry_client/: README.md  __init__.py  pyproject.toml
tests/: conftest.py  test_plugins.py  test_rag.py  test_sdk_client.py
