[project]
name = "logcentry-client"
version = "1.0.0"
description = "Lightweight LogCentry client SDK - zero heavy dependencies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LogCentry Team", email = "team@logcentry.dev"}
]
keywords = ["logging", "security", "siem", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

# ZERO required dependencies - uses only Python stdlib
dependencies = []

[project.optional-dependencies]
# Optional: async support
async = ["httpx>=0.24.0"]
# Development
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/logcentry/logcentry-client"
Documentation = "https://docs.logcentry.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logcentry_client"]

[tool.hatch.build.targets.sdist]
include = [
    "src/logcentry_client",
    "README.md",
    "LICENSE",
]
